Added Dependency Injections and settings for use of SQL Database to store data. Just a few Linq setups for handeling the Db done right now.

--- a/MVCAppAssignment2/appsettings.json
+++ b/MVCAppAssignment2/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PeopleDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }     // Be caraful with the Trusted_Connection while publishing it on GitHub
 }
