Working Databases. But no Foreign Keys

--- a/MVCAppAssignment2/appsettings.json
+++ b/MVCAppAssignment2/appsettings.json
@@ -8,7 +8,10 @@
   },
   "AllowedHosts": "*",
 
+  // Be caraful with the Trusted_Connection while publishing it on GitHub
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PeopleDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }     // Be caraful with the Trusted_Connection while publishing it on GitHub
+
+  }
 }
